--- a/Project-Cajero-Amdin/appsettings.json
+++ b/Project-Cajero-Amdin/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Issuer": "https://sga.api.labsystec.net/",
+    "Audience": "https://sga.labsystec.net",
+    "SecretKey": "ESTAESMILLAVEDECIFRADODELTOKEN2024"
+  }
 }
