--- a/BancoAPI/appsettings.json
+++ b/BancoAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "database=websitos_BancoMexico;user=websitos_AdminBancoMexico;server=websitos256.com;password=Banco2024"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,8 +10,8 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "Issuer": "https://sga.api.labsystec.net/",
-    "Audience": "https://sga.labsystec.net",
+    "Issuer": "https://bancomexicoapi.websitos256.com/",
+    "Audience": "https://bancomexico.websitos256.com/",
     "SecretKey": "ESTAESMILLAVEDECIFRADODELTOKEN2024"
   }
 }
