--- a/BancoMexicoWeb/BancoMexicoWeb.csproj
+++ b/BancoMexicoWeb/BancoMexicoWeb.csproj
@@ -10,7 +10,7 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Cajero\Models\" />
     <Folder Include="Views\Shared\" />
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
   <ItemGroup>
