--- a/BancoMexicoWeb/BancoMexicoWeb.csproj
+++ b/BancoMexicoWeb/BancoMexicoWeb.csproj
@@ -10,11 +10,16 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Cajero\Models\" />
     <Folder Include="Views\Shared\" />
-    <Folder Include="wwwroot\css\" />
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
 </Project>
